--- a/k8s.html
+++ b/k8s.html
@@ -33,7 +33,7 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"Your awesome title","name":"Your awesome title","url":"http://0.0.0.0:4000/"}</script>
   <!-- End Jekyll SEO tag -->
   <link rel="stylesheet" href="/assets/main.css">
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="stylesheet" href="/css/app.css">
   <link type="application/atom+xml" rel="alternate" href="http://0.0.0.0:4000/feed.xml" title="Your awesome title" />
 </head>
 
