--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div class="card-text">
 									Project summary, prerequisites, setup and application code.
 								</div>
-								<a class="card-link-mask" href="docs-page.html#app"></a>
+								<a class="card-link-mask" href="docs.html#app"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -92,7 +92,7 @@
 								<div class="card-text">
 									integrating the compiled Golang binary into a Docker container.
 								</div>
-								<a class="card-link-mask" href="docs-page.html#docker"></a>
+								<a class="card-link-mask" href="docs.html#docker"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -110,7 +110,7 @@
 										<code>godoc</code>.
 									</p>
 								</div>
-								<a class="card-link-mask" href="docs-page.html#tests"></a>
+								<a class="card-link-mask" href="docs.html#tests"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -128,7 +128,7 @@
 										<code>golangci-lint</code>
 									</p>
 								</div>
-								<a class="card-link-mask" href="docs-page.html#linting"></a>
+								<a class="card-link-mask" href="docs.html#linting"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -146,7 +146,7 @@
 										<code>Godoc</code>
 									</p>
 								</div>
-								<a class="card-link-mask" href="docs-page.html#godoc"></a>
+								<a class="card-link-mask" href="docs.html#godoc"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -164,7 +164,7 @@
 										<code>Artillery</code>
 									</p>
 								</div>
-								<a class="card-link-mask" href="docs-page.html#load-testing"></a>
+								<a class="card-link-mask" href="docs.html#load-testing"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
@@ -181,7 +181,7 @@
 									<p class="card-text"><strong>How To:</strong> Integrating your container into a Kubernetes pod
 										deployment.</p>
 								</div>
-								<a class="card-link-mask" href="docs-page.html#kubernetes"></a>
+								<a class="card-link-mask" href="docs.html#kubernetes"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
