--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 									<span class="theme-icon-holder card-icon-holder me-2">
 										<i class="fas fa-map-signs"></i>
 									</span><!--//card-icon-holder-->
-									<span class="card-title-text">App</span>
+									<span class="card-title-text">Golang Application</span>
 								</h5>
 								<div class="card-text">
 									Project summary, prerequisites, setup and application code.
 								</div>
-								<a class="card-link-mask" href="docs.html#app"></a>
+								<a class="card-link-mask" href="docs.html#golang-application"></a>
 							</div><!--//card-body-->
 						</div><!--//card-->
 					</div><!--//col-->
