--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
 	</footer>
 
 	<!-- Javascript -->
+	<script src="https://code.jquery.com/jquery-3.6.3.min.js"
+	integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script src="assets/plugins/popper.min.js"></script>
 	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
@@ -208,7 +210,6 @@
 	<script src="assets/js/highlight-custom.js"></script>
 	<script src="assets/plugins/simplelightbox/simple-lightbox.min.js"></script>
 	<script src="assets/plugins/gumshoe/gumshoe.polyfills.min.js"></script>
-	<script src="assets/js/docs.js"></script>
 
 </body>
 
