nav fixes, new motivation section

--- a/docs.html
+++ b/docs.html
@@ -62,14 +62,20 @@
 		<div id="docs-sidebar" class="docs-sidebar">
 			<nav id="docs-nav" class="docs-nav navbar">
 				<ul class="section-items list-unstyled nav flex-column pb-3">
+					<li class="nav-item section-title"><a class="nav-link scrollto" href="#project-motivation"><span
+								class="theme-icon-holder me-2"><i class="fa-duotone fa-chalkboard-user fa-fw"></i></span>Project Motivation</a>
+					</li>
 					<li class="nav-item section-title"><a class="nav-link scrollto" href="#golang-application"><span
-								class="theme-icon-holder me-2"><img style="margin-top: -4px;margin-left: -1px;" src="assets/images/golang-logo-green.svg" alt="logo"></span>Golang Application</a>
+								class="theme-icon-holder me-2"><img style="margin-top: -4px;margin-left: -1px;"
+									src="assets/images/golang-logo-green.svg" alt="logo"></span>Golang Application</a>
 					</li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#golang-application-topics">Project Topics</a></li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#golang-application-assumptions">Assumptions</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#golang-application-prerequisites">Prerequisites</a></li>
+					<li class="nav-item"><a class="nav-link scrollto" href="#golang-application-prerequisites">Prerequisites</a>
+					</li>
 					<li class="nav-item"><a class="nav-link scrollto" href="#golang-application-makefile">Makefile</a></li>
-					<li class="nav-item"><a class="nav-link scrollto" href="#golang-application-testing-and-developing-app">Testing/Developing
+					<li class="nav-item"><a class="nav-link scrollto"
+							href="#golang-application-testing-and-developing-app">Testing/Developing
 							App</a></li>
 					<li class="nav-item section-title mt-3"><a class="nav-link scrollto" href="#docker"><span
 								class="theme-icon-holder me-2"><i class="fa-brands fa-docker fa-fw"></i></span>Docker</a>
@@ -124,9 +130,28 @@
 		</div><!--//docs-sidebar-->
 		<div class="docs-content">
 			<div class="container">
+
+
+				<article class="docs-article" id="project-motivation">
+					<header class="docs-header">
+						<h1 class="docs-heading"><i class="fa-duotone fa-chalkboard-user fa-fw" style="color: #28b76b;"></i> Project Motivation
+						</h1>
+						<section class="docs-intro">
+							<p>This repository is a work in progress, but I'll do my best to keep the Master branch in a working
+								state. Initially, this project was to create a boilerplate for containerizing Go binaries for use in a
+								K8s
+								cluster. For now, just origanizing my notes in order to be able to replicate this process from
+								end-to-end.
+								The idea is to keep this narrow and succinct and be able to use this as a simple boilerplate for Go
+								containers.</p>
+						</section><!--//docs-intro-->
+					</header>
+				</article>
+
 				<article class="docs-article" id="golang-application">
 					<header class="docs-header">
-						<h1 class="docs-heading"><img style="height: 100px;margin-top: -8px;margin-left: -15px;margin-right: -10px;" src="assets/images/golang-logo-green.svg" alt="logo"> Golang Application
+						<h1 class="docs-heading"><img style="height: 100px;margin-top: -8px;margin-left: -15px;margin-right: -10px;"
+								src="assets/images/golang-logo-green.svg" alt="logo"> Golang Application
 						</h1>
 						<section class="docs-intro">
 							<p>This repository is a work in progress, but I'll do my best to keep the Master branch in a working
