--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>CoderDocs - Bootstrap 5 Documentation Template For Software Projects</title>
+	<title>GolangDocker</title>
 
 	<!-- Meta -->
 	<meta charset="utf-8">
