--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 	<!-- Theme CSS -->
 	<link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
+	<link id="theme-style" rel="stylesheet" href="assets/css/app.css">
 
 </head>
 
@@ -43,7 +44,8 @@
 						</a>
 					</div>
 				</div><!--//docs-logo-wrapper-->
-				<div style="float:right;font-size: 2em;margin-right: 20px;margin-top: 4px;"><a style="color: #000000;" target="_blank" href="https://github.com/mwiater/golangdocker"><i class="fa-brands fa-github"></i></a></div>
+				<div style="float:right;font-size: 2em;margin-right: 20px;margin-top: 4px;"><a style="color: #000000;"
+						target="_blank" href="https://github.com/mwiater/golangdocker"><i class="fa-brands fa-github"></i></a></div>
 
 			</div><!--//container-->
 		</div><!--//branding-->
@@ -69,7 +71,24 @@
 							<div class="card-body">
 								<h5 class="card-title mb-3">
 									<span class="theme-icon-holder card-icon-holder me-2">
-										<i class="fas fa-map-signs"></i>
+										<i class="fa-duotone fa-chalkboard-user fa-fw"></i>
+									</span><!--//card-icon-holder-->
+									<span class="card-title-text">Project Motivation</span>
+								</h5>
+								<div class="card-text">
+									Why Golang, Docker and Kubernetes?
+								</div>
+								<a class="card-link-mask" href="docs.html#project-motivation"></a>
+							</div><!--//card-body-->
+						</div><!--//card-->
+					</div><!--//col-->
+					<div class="col-12 col-lg-4 py-3">
+						<div class="card shadow-sm">
+							<div class="card-body">
+								<h5 class="card-title mb-3">
+									<span class="theme-icon-holder card-icon-holder me-2">
+										<img style=" margin-top:-12px;margin-left:-1px;" src="assets/images/golang-logo-green.svg"
+											alt="logo">
 									</span><!--//card-icon-holder-->
 									<span class="card-title-text">Golang Application</span>
 								</h5>
@@ -85,7 +104,7 @@
 							<div class="card-body">
 								<h5 class="card-title mb-3">
 									<span class="theme-icon-holder card-icon-holder me-2">
-										<i class="fas fa-map-signs"></i>
+										<i class="fa-brands fa-docker fa-fw"></i>
 									</span><!--//card-icon-holder-->
 									<span class="card-title-text">Docker</span>
 								</h5>
@@ -200,7 +219,7 @@
 
 	<!-- Javascript -->
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js"
-	integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+		integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script src="assets/plugins/popper.min.js"></script>
 	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
