--- a/docs.html
+++ b/docs.html
@@ -520,19 +520,20 @@ DOCKERIMAGE=mattwiater/golangdocker</code></pre>
 									href="https://docs.gofiber.io/">Fiber</a>:
 							</p>
 							<h5 id="api-info-">API Info:</h5>
-							<pre>http://{your-host-ip-address}:5000/api/v1</pre>
+							<pre><code>/api/v1</code></pre>
 							<h5 id="system-info-">System Info:</h5>
-							<pre>http://{your-host-ip-address}:5000/api/v1/mem
-http://{your-host-ip-address}:5000/api/v1/cpu
-http://{your-host-ip-address}:5000/api/v1/host
-http://{your-host-ip-address}:5000/api/v1/net
-http://{your-host-ip-address}:5000/api/v1/load
-      </pre>
+							<pre><code>/api/v1/resource/
+/api/v1/resource/all
+/api/v1/resource/cpu
+/api/v1/resource/host
+/api/v1/resource/load
+/api/v1/resource/memory
+/api/v1/resource/network</code></pre>
 							<h5 id="api-metrics-">API Metrics:</h5>
 							<p>For simplicity, the default <a href="https://docs.gofiber.io/api/middleware/monitor">Fiber Monitor
 									middleware</a> is included and available at:
 							</p>
-							<p><code>http://{your-host-ip-address}:5000/api/v1/metrics</code></p>
+							<p><pre><code>/api/v1/metrics</code></pre></p>
 							<h5 id="api-endpoint-documentation-via-swagger">API Endpoint Documentation via Swagger</h5>
 							<p><code>go install github.com/swaggo/swag/cmd/swag@latest</code></p>
 							<p><code>go get -u github.com/swaggo/fiber-swagger</code></p>
@@ -541,7 +542,7 @@ http://{your-host-ip-address}:5000/api/v1/load
 									href="https://github.com/mwiater/golangdocker/blob/main/scripts/docker_run.sh">docker_run.sh</a>)
 							</p>
 							<p>Then, when you run the application, docs are avaialble at:</p>
-							<p><code>http://{your-host-ip-address}:5000/api/v1/docs/index.html</code></p>
+							<p><code>/api/v1/docs/index.html</code></p>
 						</section>
 						<!--//section-->
 				</article>
